--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         applicationId "com.example.geospatialplanning"
         minSdk 23
         targetSdk 31
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
 
@@ -33,6 +34,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.+'
+    implementation("com.tomtom.online:sdk-maps:2.4782")
+    implementation("com.tomtom.online:sdk-search:2.4782")
+    implementation "androidx.fragment:fragment:1.4.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
