--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     repositories {
         google()
+        jcenter()
         mavenCentral()
 
     }
@@ -12,6 +13,8 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
